AC_PREREQ([2.69])
AC_INIT(nvdecinfo,[1.0],[philipl@overt.org],nvdecinfo)
AM_INIT_AUTOMAKE([dist-bzip2 foreign])
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_INSTALL

LT_LIB_DLLOAD

PKG_CHECK_MODULES(NVCODECS, [ffnvcodec >= 8.0.14.1])
NVDECINFO_CFLAGS="$NVDECINFO_CFLAGS $NVCODECS_CFLAGS"
NVDECINFO_LIBS="$NVDECINFO_LIBS $NVCODECS_LIBS"

AC_SUBST(NVDECINFO_CFLAGS)
AC_SUBST(NVDECINFO_LIBS)

AC_CONFIG_HEADERS(config.h)
AC_OUTPUT([Makefile])
