AC_PREREQ([2.69])
AC_INIT(nv-video-info,[1.0],[philipl@overt.org],nv-video-info)
AM_INIT_AUTOMAKE([dist-bzip2 foreign])
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL

LT_LIB_DLLOAD

PKG_CHECK_MODULES(NVCODECS, [ffnvcodec >= 9.1.23.0])
NVVIDEOINFO_CFLAGS="$NVVIDEOINFO_CFLAGS $NVCODECS_CFLAGS"
NVVIDEOINFO_LIBS="$NVVIDEOINFO_LIBS $NVCODECS_LIBS"

AC_SUBST(NVVIDEOINFO_CFLAGS)
AC_SUBST(NVVIDEOINFO_LIBS)

AC_CONFIG_HEADERS(config.h)
AC_OUTPUT([Makefile])
